--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,9 +9,26 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:gravity="center"
         android:layout_height="match_parent">
 
 
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="ENTER MESSAGE TO CHAT"
+            android:inputType="textMultiLine" />
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+       android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/message"
+            android:text="Send" />
 
 
     </RelativeLayout>
